==> belabelosam7829b-oss/Smart_Envionment_Terminal/Drivers/User/Src/OLED.c <==
#include "OLED.h"
#include "i2c.h"
#include <string.h>

static uint8_t oled_address = 0x78;
static uint8_t OLED_GRAM[128][8];

static const uint8_t F8X16[][16] = {
    {0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00},//
    {0x00,0x00,0x00,0xF8,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x33,0x30,0x00,0x00,0x00},//!
    {0x00,0x10,0x0C,0x06,0x10,0x0C,0x06,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00},//"
    {0x40,0xC0,0x78,0x40,0xC0,0x78,0x40,0x00,0x04,0x3F,0x04,0x04,0x3F,0x04,0x04,0x00},//#
    {0x00,0x70,0x88,0xFC,0x08,0x30,0x00,0x00,0x00,0x0C,0x10,0x3F,0x11,0x0E,0x00,0x00},//$
    {0xF0,0x08,0xF0,0x00,0xE0,0x18,0x00,0x00,0x00,0x21,0x1C,0x03,0x1E,0x21,0x1E,0x00},//%
    {0x00,0xF0,0x08,0x88,0x70,0x00,0x00,0x00,0x1E,0x21,0x23,0x24,0x19,0x27,0x21,0x10},//&
    {0x10,0x16,0x0E,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00},//'
    {0x00,0x00,0x00,0xE0,0x18,0x04,0x02,0x00,0x00,0x00,0x00,0x07,0x18,0x20,0x40,0x00},//(
    {0x00,0x02,0x04,0x18,0xE0,0x00,0x00,0x00,0x00,0x40,0x20,0x18,0x07,0x00,0x00,0x00},//)
    {0x40,0x40,0x80,0xF0,0x80,0x40,0x40,0x00,0x02,0x02,0x01,0x0F,0x01,0x02,0x02,0x00},//*
    {0x00,0x00,0x80,0x80,0xE0,0x80,0x80,0x00,0x00,0x00,0x00,0x00,0x03,0x00,0x00,0x00},//+
    {0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x01,0x11,0x16,0x0E,0x00,0x00,0x00},//,
    {0x00,0x00,0x80,0x80,0x80,0x80,0x80,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00},//-
    {0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x30,0x30,0x00,0x00,0x00,0x00,0x00},//.
    {0x00,0x00,0x00,0x00,0x80,0x60,0x18,0x04,0x00,0x60,0x18,0x06,0x01,0x00,0x00,0x00},// /
    {0x00,0xE0,0x10,0x08,0x08,0x10,0xE0,0x00,0x00,0x0F,0x10,0x20,0x20,0x10,0x0F,0x00},//0
    {0x00,0x10,0x10,0xF8,0x00,0x00,0x00,0x00,0x00,0x20,0x20,0x3F,0x20,0x20,0x00,0x00},//1
    {0x00,0x70,0x08,0x08,0x08,0x88,0x70,0x00,0x00,0x30,0x28,0x24,0x22,0x21,0x30,0x00},//2
    {0x00,0x30,0x08,0x88,0x88,0x48,0x30,0x00,0x00,0x18,0x20,0x20,0x20,0x11,0x0E,0x00},//3
    {0x00,0x00,0xC0,0x20,0x10,0xF8,0x00,0x00,0x00,0x07,0x04,0x24,0x24,0x3F,0x24,0x00},//4
    {0x00,0xF8,0x88,0x88,0x88,0x08,0x08,0x00,0x00,0x19,0x20,0x20,0x20,0x11,0x0E,0x00},//5
    {0x00,0xE0,0x10,0x88,0x88,0x18,0x00,0x00,0x00,0x0F,0x11,0x20,0x20,0x11,0x0E,0x00},//6
    {0x00,0x08,0x08,0x08,0xC8,0x38,0x08,0x00,0x00,0x00,0x00,0x3E,0x01,0x00,0x00,0x00},//7
    {0x00,0x70,0x88,0x08,0x08,0x88,0x70,0x00,0x00,0x0E,0x11,0x20,0x20,0x11,0x0E,0x00},//8
    {0x00,0x70,0x88,0x08,0x08,0x10,0xE0,0x00,0x00,0x00,0x18,0x21,0x21,0x11,0x0E,0x00},//9
    {0x00,0x00,0x00,0xC0,0xC0,0x00,0x00,0x00,0x00,0x00,0x00,0x30,0x30,0x00,0x00,0x00},//:
    {0x00,0x00,0x00,0xC0,0xC0,0x00,0x00,0x00,0x00,0x01,0x11,0x36,0x1E,0x00,0x00,0x00},//;
    {0x00,0x00,0x00,0x80,0x40,0x20,0x10,0x08,0x00,0x01,0x02,0x04,0x08,0x10,0x00,0x00},//<
    {0x40,0x40,0x40,0x40,0x40,0x40,0x40,0x00,0x04,0x04,0x04,0x04,0x04,0x04,0x04,0x00},//=
    {0x00,0x08,0x10,0x20,0x40,0x80,0x00,0x00,0x00,0x10,0x08,0x04,0x02,0x01,0x00,0x00},//>
    {0x00,0x70,0x48,0x08,0x08,0x00,0x70,0x00,0x00,0x00,0x00,0x27,0x08,0x00,0x00,0x00},//?
    {0xC0,0x30,0x08,0x28,0x48,0x48,0x30,0x00,0x07,0x18,0x20,0x24,0x24,0x26,0x19,0x00},//@
    {0x00,0x00,0xC0,0x38,0xE0,0x00,0x00,0x00,0x20,0x3C,0x23,0x02,0x02,0x27,0x38,0x20},//A
    {0x08,0xF8,0x88,0x88,0x88,0x70,0x00,0x00,0x20,0x3F,0x21,0x21,0x21,0x1E,0x00,0x00},//B
    {0xC0,0x30,0x08,0x08,0x08,0x08,0x38,0x00,0x07,0x18,0x20,0x20,0x20,0x10,0x08,0x00},//C
    {0x08,0xF8,0x08,0x08,0x08,0x10,0xE0,0x00,0x20,0x3F,0x20,0x20,0x20,0x11,0x0E,0x00},//D
    {0x08,0xF8,0x88,0x88,0xE8,0x08,0x10,0x00,0x20,0x3F,0x21,0x21,0x23,0x21,0x18,0x00},//E
    {0x08,0xF8,0x88,0x88,0xE8,0x08,0x10,0x00,0x20,0x3F,0x20,0x20,0x20,0x00,0x00,0x00},//F
    {0xC0,0x30,0x08,0x88,0x88,0x18,0x00,0x00,0x07,0x18,0x20,0x21,0x21,0x11,0x3E,0x00},//G
    {0x08,0xF8,0x08,0x00,0x00,0x08,0xF8,0x08,0x20,0x3F,0x21,0x01,0x01,0x21,0x3F,0x20},//H
    {0x00,0x08,0x08,0xF8,0x08,0x08,0x00,0x00,0x00,0x20,0x20,0x3F,0x20,0x20,0x00,0x00},//I
    {0x00,0x00,0x08,0x08,0xF8,0x08,0x08,0x00,0x00,0x30,0x20,0x20,0x3F,0x00,0x00,0x00},//J
    {0x08,0xF8,0x88,0xC0,0x28,0x18,0x08,0x00,0x20,0x3F,0x20,0x01,0x26,0x38,0x20,0x00},//K
    {0x08,0xF8,0x08,0x00,0x00,0x00,0x00,0x00,0x20,0x3F,0x20,0x20,0x20,0x20,0x20,0x00},//L
    {0x08,0xF8,0xF8,0x00,0xF8,0xF8,0x08,0x00,0x20,0x3F,0x01,0x3E,0x01,0x3F,0x20,0x00},//M
    {0x08,0xF8,0x30,0xC0,0x00,0x08,0xF8,0x08,0x20,0x3F,0x20,0x01,0x06,0x38,0x3F,0x20},//N
    {0xE0,0x10,0x08,0x08,0x08,0x10,0xE0,0x00,0x0F,0x10,0x20,0x20,0x20,0x10,0x0F,0x00},//O
    {0x08,0xF8,0x08,0x08,0x08,0x08,0xF0,0x00,0x20,0x3F,0x21,0x01,0x01,0x01,0x00,0x00},//P
    {0xE0,0x10,0x08,0x08,0x08,0x10,0xE0,0x00,0x0F,0x18,0x24,0x24,0x38,0x50,0x4F,0x00},//Q
    {0x08,0xF8,0x88,0x88,0x88,0x88,0x70,0x00,0x20,0x3F,0x20,0x00,0x03,0x0C,0x30,0x20},//R
    {0x00,0x70,0x88,0x88,0x88,0x08,0x30,0x00,0x00,0x18,0x20,0x21,0x21,0x21,0x1E,0x00},//S
    {0x18,0x08,0x08,0xF8,0x08,0x08,0x18,0x00,0x00,0x00,0x20,0x3F,0x20,0x00,0x00,0x00},//T
    {0x08,0xF8,0x00,0x00,0x00,0xF8,0x08,0x00,0x00,0x1F,0x20,0x20,0x20,0x1F,0x00,0x00},//U
    {0x08,0x78,0x80,0x00,0x80,0x78,0x08,0x00,0x00,0x03,0x0C,0x30,0x0C,0x03,0x00,0x00},//V
    {0x08,0xF8,0x00,0xF8,0x00,0xF8,0x08,0x00,0x00,0x1F,0x3E,0x01,0x3E,0x1F,0x00,0x00},//W
    {0x08,0x18,0x68,0x80,0x68,0x18,0x08,0x00,0x20,0x31,0x2E,0x01,0x2E,0x31,0x20,0x00},//X
    {0x08,0x38,0xC0,0x00,0xC0,0x38,0x08,0x00,0x00,0x00,0x20,0x3F,0x20,0x00,0x00,0x00},//Y
    {0x10,0x08,0x08,0x08,0xC8,0x38,0x08,0x00,0x30,0x2C,0x23,0x20,0x20,0x20,0x30,0x00}, //Z
    {0x00,0x00,0x00,0xFC,0x04,0x04,0x00,0x00,0x00,0x00,0x00,0x3F,0x20,0x20,0x00,0x00}, //[
    {0x00,0x04,0x18,0x60,0x80,0x00,0x00,0x00,0x00,0x00,0x01,0x06,0x18,0x60,0x00,0x00}, //斜杠
    {0x00,0x00,0x04,0x04,0xFC,0x00,0x00,0x00,0x00,0x20,0x20,0x3F,0x00,0x00,0x00,0x00}, //]
    {0x08,0x04,0x02,0x01,0x02,0x04,0x08,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00}, //^
    {0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x80,0x80,0x80,0x80,0x80,0x80,0x80,0x80}, //_
    {0x00,0x02,0x04,0x08,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00}, //`
    {0x00,0x00,0x80,0x80,0x80,0x80,0x00,0x00,0x00,0x19,0x24,0x22,0x22,0x22,0x3F,0x20}, //a
    {0x08,0xF8,0x00,0x80,0x80,0x00,0x00,0x00,0x00,0x3F,0x11,0x20,0x20,0x11,0x0E,0x00}, //b
    {0x00,0x00,0x00,0x80,0x80,0x80,0x00,0x00,0x00,0x0E,0x11,0x20,0x20,0x20,0x11,0x00}, //c
    {0x00,0x00,0x80,0x80,0x00,0x08,0xF8,0x00,0x00,0x0E,0x11,0x20,0x20,0x11,0x3F,0x20}, //d
    {0x00,0x00,0x80,0x80,0x80,0x80,0x00,0x00,0x00,0x1F,0x22,0x22,0x22,0x22,0x13,0x00}, //e
    {0x00,0x80,0x80,0xF0,0x88,0x88,0x88,0x18,0x00,0x20,0x20,0x3F,0x20,0x20,0x00,0x00}, //f
    {0x00,0x00,0x80,0x80,0x80,0x80,0x80,0x00,0x00,0x6B,0x94,0x94,0x94,0x94,0x7C,0x00}, //g
    {0x08,0xF8,0x00,0x80,0x80,0x80,0x00,0x00,0x20,0x3F,0x21,0x00,0x00,0x20,0x3F,0x20}, //h
    {0x00,0x80,0x98,0x98,0x00,0x00,0x00,0x00,0x00,0x20,0x20,0x3F,0x20,0x20,0x00,0x00}, //i
    {0x00,0x00,0x00,0x80,0x98,0x98,0x00,0x00,0x00,0xC0,0x80,0x80,0x80,0x7F,0x00,0x00}, //j
    {0x08,0xF8,0x00,0x00,0x80,0x80,0x00,0x00,0x20,0x3F,0x24,0x02,0x2D,0x30,0x20,0x00}, //k
    {0x00,0x08,0x08,0xF8,0x00,0x00,0x00,0x00,0x00,0x20,0x20,0x3F,0x20,0x20,0x00,0x00}, //l
    {0x80,0x80,0x80,0x80,0x80,0x80,0x80,0x00,0x3F,0x20,0x00,0x3F,0x20,0x00,0x3F,0x20}, //m
    {0x80,0x80,0x00,0x80,0x80,0x80,0x00,0x00,0x20,0x3F,0x21,0x00,0x00,0x20,0x3F,0x20}, //n
    {0x00,0x00,0x80,0x80,0x80,0x80,0x00,0x00,0x00,0x0F,0x11,0x20,0x20,0x11,0x0F,0x00}, //o
    {0x80,0x80,0x00,0x80,0x80,0x00,0x00,0x00,0x80,0xFF,0xA1,0x20,0x20,0x11,0x0E,0x00}, //p
    {0x00,0x00,0x80,0x80,0x80,0x80,0x00,0x00,0x0E,0x11,0x20,0x20,0xA0,0xFF,0x80,0x00}, //q
    {0x80,0x80,0x80,0x00,0x80,0x80,0x80,0x00,0x20,0x20,0x3F,0x21,0x20,0x00,0x01,0x00}, //r
    {0x00,0x00,0x80,0x80,0x80,0x80,0x80,0x00,0x00,0x33,0x24,0x24,0x24,0x24,0x19,0x00}, //s
    {0x00,0x80,0x80,0xE0,0x80,0x80,0x00,0x00,0x00,0x00,0x00,0x1F,0x20,0x20,0x00,0x00}, //t
    {0x80,0x80,0x00,0x00,0x00,0x80,0x80,0x00,0x00,0x1F,0x20,0x20,0x20,0x11,0x3F,0x20}, //u
    {0x80,0x80,0x80,0x00,0x80,0x80,0x80,0x00,0x00,0x03,0x0C,0x30,0x0C,0x03,0x00,0x00}, //v
    {0x80,0x80,0x00,0x80,0x00,0x80,0x80,0x00,0x0F,0x30,0x0C,0x03,0x0C,0x30,0x0F,0x00}, //w
    {0x00,0x80,0x80,0x00,0x80,0x80,0x00,0x00,0x20,0x31,0x0E,0x01,0x0E,0x31,0x20,0x00}, //x
    {0x80,0x80,0x80,0x00,0x00,0x00,0x00,0x00,0x80,0x81,0x86,0x78,0x06,0x01,0x00,0x00}, //y
    {0x00,0x80,0x80,0x80,0x80,0x80,0x80,0x00,0x20,0x21,0x26,0x28,0x30,0x20,0x20,0x00}, //z
    {0x00,0x00,0x00,0x00,0x80,0x7C,0x02,0x02,0x00,0x00,0x00,0x00,0x00,0x3F,0x40,0x40}, //{
    {0x00,0x00,0x00,0x00,0xFF,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xFF,0x00,0x00,0x00}, //|
    {0x00,0x02,0x02,0x7C,0x80,0x00,0x00,0x00,0x00,0x40,0x40,0x3F,0x00,0x00,0x00,0x00}, //}
    {0x00,0x06,0x01,0x01,0x02,0x02,0x04,0x04,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00}  //~
};

static void OLED_WriteCmd(uint8_t cmd) {
    uint8_t data[2] = {0x00, cmd};
    HAL_I2C_Master_Transmit(&hi2c1, oled_address, data, 2, HAL_MAX_DELAY);
}

static void OLED_WriteData(uint8_t data) {
    uint8_t buf[2] = {0x40, data};
    HAL_I2C_Master_Transmit(&hi2c1, oled_address, buf, 2, HAL_MAX_DELAY);
}

static void OLED_DetectAddress(void) {
    if (HAL_I2C_IsDeviceReady(&hi2c1, 0x78, 3, 100) == HAL_OK) {
        oled_address = 0x78;
        return;
    }
    if (HAL_I2C_IsDeviceReady(&hi2c1, 0x7A, 3, 100) == HAL_OK) {
        oled_address = 0x7A;
        return;
    }
}

void OLED_Init(void) {
    HAL_Delay(500);
    OLED_DetectAddress();
    OLED_WriteCmd(0xAE); OLED_WriteCmd(0xD5); OLED_WriteCmd(0x80);
    OLED_WriteCmd(0xA8); OLED_WriteCmd(0x3F); OLED_WriteCmd(0xD3);
    OLED_WriteCmd(0x00); OLED_WriteCmd(0x40); OLED_WriteCmd(0x8D);
    OLED_WriteCmd(0x14); OLED_WriteCmd(0x20); OLED_WriteCmd(0x02);
    OLED_WriteCmd(0xA1);
    OLED_WriteCmd(0xC8);
    OLED_WriteCmd(0xDA); OLED_WriteCmd(0x12); OLED_WriteCmd(0x81);
    OLED_WriteCmd(0xCF); OLED_WriteCmd(0xD9); OLED_WriteCmd(0xF1);
    OLED_WriteCmd(0xDB); OLED_WriteCmd(0x40); OLED_WriteCmd(0xA4);
    OLED_WriteCmd(0xA6); OLED_WriteCmd(0xAF);
    OLED_Clear();
    OLED_UpdateScreen();
}

void OLED_Clear(void) {
    memset(OLED_GRAM, 0, sizeof(OLED_GRAM));
}

void OLED_UpdateScreen(void) {
    for (uint8_t i = 0; i < 8; i++) {
        OLED_WriteCmd(0xB0 + i);
        OLED_WriteCmd(0x00);
        OLED_WriteCmd(0x10);
        for (uint8_t n = 0; n < 128; n++) {
            OLED_WriteData(OLED_GRAM[n][i]);
        }
    }
}

void OLED_DrawPoint(uint8_t x, uint8_t y, uint8_t mode) {
    if (x > 127 || y > 63) return;
    if (mode) OLED_GRAM[x][y / 8] |= (1 << (y % 8));
    else OLED_GRAM[x][y / 8] &= ~(1 << (y % 8));
}

void OLED_ShowChar(uint8_t x, uint8_t y, char ch) {
    if (ch < ' ' || ch > '~') return;
    uint8_t c = ch - ' ';
    uint8_t page = y / 8;
    for (uint8_t i = 0; i < 8; i++) {
        if (page < 8) OLED_GRAM[x + i][page] = F8X16[c][i];
        if (page + 1 < 8) OLED_GRAM[x + i][page + 1] = F8X16[c][i + 8];
    }
}

void OLED_ShowString(uint8_t x, uint8_t y, const char *str) {
    while (*str) {
        OLED_ShowChar(x, y, *str++);
        x += 8;
        if (x > 120) { x = 0; y += 16; }
    }
}
